--- a/public/style.css
+++ b/public/style.css
@@ -3938,7 +3938,7 @@ textarea.wpcf7-form-control {
   left: 0;
   right: 0;
   height: 4px;
-  background-color: #e9e9e9;
+  background-color: #e9e9e969;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   -o-transition: all 0.2s ease-out;
